--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1393,8 +1393,8 @@ files:
         sr: sr_RS
         ku: kmr_TR
         kmr: kmr
-  - source: /lang/en/texts/nutriscore-v2.html
-    translation: /lang/%two_letters_code%/texts/nutriscore-v2.html
+  - source: /lang/en/texts/new-nutriscore.html
+    translation: /lang/%two_letters_code%/texts/new-nutriscore.html
     languages_mapping:
       two_letters_code:
         zh-HK: zh_HK
