--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -9,6 +9,7 @@ Crowdin:
 🧴 Open Beauty Facts:
 - changed-files:
   - any-glob-to-any-file: '**/*obf*'
+  - any-glob-to-any-file: 'lang/obf/en/texts/open-beauty-facts-mobile-app.html'
 
 🍊 Open Food Facts:
 - changed-files:
