--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1393,6 +1393,23 @@ files:
         sr: sr_RS
         ku: kmr_TR
         kmr: kmr
+  - source: /knowledge_panels/ingredients/beauty/world-en.yml
+    translation: /knowledge_panels/ingredients/beauty/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
   - source: /lang/en/texts/new-nutriscore.html
     translation: /lang/%two_letters_code%/texts/new-nutriscore.html
     languages_mapping:
