ci: Update build-additives.yml for nutrients

--- a/.github/workflows/build-additives.yml
+++ b/.github/workflows/build-additives.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - 'knowledge_panels/additives/*.yml'
       - 'knowledge_panels/ingredients/*.yml'
-
+      - 'knowledge_panels/nutrients/*.yml'
+      
 jobs:
   update-assets:
     if: github.repository_owner == 'openfoodfacts'
