--- a/.github/workflows/build-additives.yml
+++ b/.github/workflows/build-additives.yml
@@ -6,7 +6,7 @@ on:
       - 'knowledge_panels/additives/*.yml'
       - 'knowledge_panels/ingredients/*.yml'
       - 'knowledge_panels/nutrients/*.yml'
-      
+      - 'knowledge_panels/ingredients/beauty/*.yml'
 jobs:
   update-assets:
     if: github.repository_owner == 'openfoodfacts'
