--- a/.github/workflows/build-additives.yml
+++ b/.github/workflows/build-additives.yml
@@ -1,4 +1,4 @@
-name: Build HTML pages for additives knowledge cards
+name: Build HTML pages for Knowledge cards related to Taxonomy entries
 
 on:
   push:
