Apply suggestions from code review

--- a/.github/workflows/crowdin-split.yml
+++ b/.github/workflows/crowdin-split.yml
@@ -12,25 +12,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Sync docs localization
+      - name: Sync knowledge panels
         uses: crowdin/github-action@v1
         with:
           upload_sources: true
           upload_translations: false
           download_translations: true
-          config: 'path/to/your/first_crowdin.yml'
+          config: '.github/crowdin-kp.yml'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
           CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
 
-      - name: Sync app localization
+      - name: Sync static pages
         uses: crowdin/github-action@v1
         with:
           upload_sources: true
           upload_translations: false
           download_translations: true
-          config: 'path/to/your/second_crowdin.yml'
+          config: '.github/crowdin-static-pages.yml'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
