--- a/.github/crowdin-html.yml
+++ b/.github/crowdin-html.yml
@@ -4,8 +4,8 @@ pull_request_body: '### What\n- Automated pull request pulling in new or updated
 pull_request_title: 'chore: New Crowdin translations to review and merge'
 preserve_hierarchy: 1
 files:
-  - source: /lang/en/texts/google-impact-challenge-on-climate.html
-    translation: /lang/%two_letters_code%/texts/google-impact-challenge-on-climate.html
+  - source: ../lang/en/texts/google-impact-challenge-on-climate.html
+    translation: ../lang/%two_letters_code%/texts/google-impact-challenge-on-climate.html
     languages_mapping:
       two_letters_code:
         zh-HK: zh_HK
