Update and rename .github/crowdin-kp.yml to crowdin-kp.yml

--- a/crowdin-kp.yml
+++ b/crowdin-kp.yml
@@ -4,8 +4,8 @@ pull_request_body: '### What\n- Automated pull request pulling in new or updated
 pull_request_title: 'chore: New Crowdin translations to review and merge'
 preserve_hierarchy: 1
 files:
-  - source: ../knowledge_panels/additives/world-en.yml
-    translation: ../knowledge_panels/additives/world-%two_letters_code%.yml
+  - source: /knowledge_panels/additives/world-en.yml
+    translation: /knowledge_panels/additives/world-%two_letters_code%.yml
     languages_mapping:
       two_letters_code:
         zh-HK: zh_HK
@@ -21,8 +21,8 @@ files:
         sr: sr_RS
         ku: kmr_TR
         kmr: kmr
-  - source: ../knowledge_panels/ingredients/world-en.yml
-    translation: ../knowledge_panels/ingredients/world-%two_letters_code%.yml
+  - source: /knowledge_panels/ingredients/world-en.yml
+    translation: /knowledge_panels/ingredients/world-%two_letters_code%.yml
     languages_mapping:
       two_letters_code:
         zh-HK: zh_HK
