--- a/.github/workflows/crowdin-split.yml
+++ b/.github/workflows/crowdin-split.yml
@@ -18,7 +18,7 @@ jobs:
           upload_sources: true
           upload_translations: false
           download_translations: true
-          config: '.github/crowdin-kp.yml'
+          config: 'crowdin-kp.yml'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
@@ -30,7 +30,7 @@ jobs:
           upload_sources: true
           upload_translations: false
           download_translations: true
-          config: '.github/crowdin-static-pages.yml'
+          config: 'crowdin-html.yml'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
