--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -2,10 +2,17 @@ github_actions:
 - changed-files:
   - any-glob-to-any-file: '.github/**/*'
 
+📖 Knowledge panels:
+- changed-files:
+  - any-glob-to-any-file: 'knowledge_panels/**/*'
+  - any-glob-to-any-file: 'crowdin-kp.yml'
+  
 Crowdin:
 - changed-files:
   - any-glob-to-any-file: 'crowdin.yml'
-
+  - any-glob-to-any-file: 'crowdin-kp.yml'
+  - any-glob-to-any-file: 'crowdin-html.yml'
+  
 🧴 Open Beauty Facts:
 - changed-files:
   - any-glob-to-any-file: '**/*obf*'
@@ -40,7 +47,7 @@ Eco-Score:
   - any-glob-to-any-file: 'lang/en/texts/nutriscore-formula.html'
   - any-glob-to-any-file: 'lang/en/texts/nutriscore.html'
 
-roadmap2019-roadmap:
+2019 Roadmap:
 - changed-files:
   - any-glob-to-any-file: 'lang/en/texts/2019-roadmap.html'
 
@@ -72,7 +79,7 @@ contribute:
 - changed-files:
   - any-glob-to-any-file: 'lang/en/texts/contribute.html'
 
-cop-26:
+COP 26:
 - changed-files:
   - any-glob-to-any-file: 'lang/en/texts/cop26/**/*'
 
