ci: Update labeler.yml

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -6,6 +6,7 @@ github_actions:
 - changed-files:
   - any-glob-to-any-file: 'knowledge_panels/**/*'
   - any-glob-to-any-file: 'crowdin-kp.yml'
+  - any-glob-to-any-file: 'lang/*/knowledge_panels/**/*'
   
 Crowdin:
 - changed-files:
