ci: Update build-additives.yml

--- a/.github/workflows/build-additives.yml
+++ b/.github/workflows/build-additives.yml
@@ -39,6 +39,6 @@ jobs:
         signoff: false
         branch: auto-update-assets
         delete-branch: true
-        title: 'chore: Update assets'
+        title: 'chore: Automated update of knowledge cards HTML files'
         body: |
           Automated update of knowledge cards HTML files
