feat: build_html take in to account flavors

--- a/.github/workflows/build-additives.yml
+++ b/.github/workflows/build-additives.yml
@@ -3,9 +3,7 @@ name: Build HTML pages for knowledge cards
 on:
   push:
     paths:
-      - 'knowledge_panels/additives/*.yml'
-      - 'knowledge_panels/ingredients/*.yml'
-      - 'knowledge_panels/nutrients/*.yml'
+      - 'knowledge_panels/**.yml'
       
 jobs:
   update-assets:
