Remove redundant group structure in YAML file

--- a/knowledge_panels/off/categories/world-en.yml
+++ b/knowledge_panels/off/categories/world-en.yml
@@ -1,11 +1,4 @@
-groups:
-  - 
-    tag_type: categories
-    country: world
-    lang: en
-    items:
-      - 
-        value_tag: en:comté cheese:
+en:comté cheese:
   content: |-
     - ***What it is: Comté is a firm, pressed-cooked cheese made from unpasteurized cow's milk, originating from the Franche-Comté region in eastern France. It holds an Appellation d'Origine Protégée (AOP) status, meaning its production is strictly regulated regarding geography, cow breed (primarily Montbéliarde or French Simmental), feed (no silage), and cheesemaking methods. It's produced in large wheels.
     - ***Types/Characteristics: The primary variation in Comté comes from its aging period. It must be aged for a minimum of 4 months, but is often aged much longer (e.g., 6, 12, 18, 24+ months).
