Simplify world-en.yml label structure

--- a/knowledge_panels/labels/world-en.yml
+++ b/knowledge_panels/labels/world-en.yml
@@ -1,12 +1,5 @@
-groups:
-  - 
-    tag_type: labels
-    country: world
-    lang: en
-    items:
-      - 
-        value_tag: en:eu-organic
-        content: |-
+en:eu-organic
+  content: |-
           - ***What it is:*** xxxxx
           - ***What it garantees:*** pim pam poum
           - ***What it does not garantee:*** pim pam poum
