Add multiple language mappings to crowdin-kp.yml

--- a/crowdin-kp.yml
+++ b/crowdin-kp.yml
@@ -72,3 +72,207 @@ files:
         sr: sr_RS
         ku: kmr_TR
         kmr: kmr
+  - source: /knowledge_panels/obf/labels/world-en.yml
+    translation: /knowledge_panels/off/labels/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/obf/categories/world-en.yml
+    translation: /knowledge_panels/off/categories/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/obf/additives/world-en.yml
+    translation: /knowledge_panels/off/additives/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/obf/ingredients/world-en.yml
+    translation: /knowledge_panels/off/ingredients/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/opf/labels/world-en.yml
+    translation: /knowledge_panels/off/labels/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/opf/categories/world-en.yml
+    translation: /knowledge_panels/off/categories/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/opf/additives/world-en.yml
+    translation: /knowledge_panels/off/additives/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/opf/ingredients/world-en.yml
+    translation: /knowledge_panels/off/ingredients/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/opff/labels/world-en.yml
+    translation: /knowledge_panels/off/labels/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/opff/categories/world-en.yml
+    translation: /knowledge_panels/off/categories/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/opff/additives/world-en.yml
+    translation: /knowledge_panels/off/additives/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
+  - source: /knowledge_panels/opff/ingredients/world-en.yml
+    translation: /knowledge_panels/off/ingredients/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
