--- a/crowdin-kp.yml
+++ b/crowdin-kp.yml
@@ -4,6 +4,23 @@ pull_request_body: '### What\n- Automated pull request pulling in new or updated
 pull_request_title: 'chore: New Knowledge Panels translations to review and merge'
 preserve_hierarchy: 1
 files:
+  - source: /knowledge_panels/*/*/world-en.yml
+    target: %original_path%/world-%two_letters_code%.yml
+    languages_mapping:
+      two_letters_code:
+        zh-HK: zh_HK
+        zh-CN: zh_CN
+        en-AU: en_AU
+        en-GB: en_GB
+        pt-BR: pt_BR
+        pt-PT: pt_PT
+        nl-BE: nl_BE
+        nl-NL: nl_NL
+        zh-TW: zh_TW
+        sr-CS: sr_CS
+        sr: sr_RS
+        ku: kmr_TR
+        kmr: kmr
   - source: /knowledge_panels/off/labels/world-en.yml
     translation: /knowledge_panels/off/labels/world-%two_letters_code%.yml
     languages_mapping:
