Update Crowdin configuration for file hierarchy

--- a/crowdin-kp.yml
+++ b/crowdin-kp.yml
@@ -4,7 +4,7 @@ pull_request_body: '### What\n- Automated pull request pulling in new or updated
 pull_request_title: 'chore: New Knowledge Panels translations to review and merge'
 preserve_hierarchy: 1
 files:
-  - source: /knowledge_panels/*/*/world-en.yml
+  - source: /knowledge_panels/**/world-en.yml
     target: %original_path%/world-%two_letters_code%.yml
     languages_mapping:
       two_letters_code:
