--- a/.github/workflows/build-additives.yml
+++ b/.github/workflows/build-additives.yml
@@ -1,10 +1,9 @@
-name: Build HTML pages for knowledge cards
+name: Build HTML pages for Knowledge cards related to Taxonomy entries
 
 on:
   push:
     paths:
       - 'knowledge_panels/**.yml'
-      
 jobs:
   update-assets:
     if: github.repository_owner == 'openfoodfacts'
