ci: Update crowdin-kp.yml

--- a/crowdin-kp.yml
+++ b/crowdin-kp.yml
@@ -5,7 +5,7 @@ pull_request_title: 'chore: New Knowledge Panels translations to review and merg
 preserve_hierarchy: 1
 files:
   - source: /knowledge_panels/**/world-en.yml
-    target: %original_path%/world-%two_letters_code%.yml
+    target: "%original_path%/world-%two_letters_code%.yml"
     languages_mapping:
       two_letters_code:
         zh-HK: zh_HK
