--- a/knowledge_panels/labels/world-en.yml
+++ b/knowledge_panels/labels/world-en.yml
@@ -1,20 +1,3 @@
-en:eu-organic
+en:nutriscore
   content: |-
-    - ***What it is:*** The official organic certification logo of the European Union, often called the "Euro-leaf". It is mandatory for pre-packaged organic food produced and sold within the EU that meets the required standards.
-    - ***What it guarantees:***
-        - At least 95% of the product's agricultural ingredients are organic.
-        - Compliance with strict EU regulations on organic production, processing, transport, and storage.
-        - Prohibition of Genetically Modified Organisms (GMOs).
-        - Restricted use of artificial fertilizers, herbicides, and pesticides.
-        - Adherence to specific animal welfare standards (e.g., free range, organic feed).
-        - Promotion of sustainable agricultural practices and biodiversity.
-        - Product traceability and regular inspections by accredited control bodies.
-    - ***What it does not guarantee:***
-        - That the product is 100% organic (up to 5% non-organic agricultural ingredients are allowed under strict conditions).
-        - Superior nutritional quality compared to conventional products (focus is on production method).
-        - That the product is locally produced (origin can be EU, non-EU, or mixed).
-        - Specific social or fair trade standards (though some overlap in principles may exist).
-        - Complete absence of any pesticides (certain natural pesticides are permitted).
-    - ***Factoids:***
-        - Use of the logo became mandatory for pre-packaged organic foods in the EU on July 1, 2010 (fully applicable from July 1, 2012).
-        - The label must be accompanied by the code number of the control body and an indication of the origin of the agricultural raw materials (e.g., 'EU Agriculture', 'non-EU Agriculture', 'EU/non-EU Agriculture', or a specific country if applicable).
+    - ***What it is: Nutri-Score is a front-of-pack (FOP) nutrition labeling system designed to provide an easily understandable assessment of the overall nutritional quality of food products at a glance. It employs a five-color, five-letter scale ranging from A (dark green) for the most nutritionally favorable products to E (red) for the least favorable. Developed by the French scientific team EREN, its primary aim is to help consumers compare the nutritional value of foods within the same category and encourage healthier food choices. Originating in France, it has been officially adopted (often on a voluntary basis) by several other European countries and is used by numerous food manufacturers. More at https://world.openfoodfacts.org/nutriscore
