fix: Update build-additives.yml

--- a/.github/workflows/build-additives.yml
+++ b/.github/workflows/build-additives.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         cd knowledge_panels
         python3 -m pip install -r requirements.txt --user
-        python3 build_html.py additives ingredients nutrients
+        python3 build_html.py additives ingredients nutrients categories
 
     - name: Check for uncommitted changes
       id: check-changes
