--- a/.github/workflows/build-additives.yml
+++ b/.github/workflows/build-additives.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'knowledge_panels/**.yml'
+  workflow_dispatch:
 jobs:
   update-assets:
     if: github.repository_owner == 'openfoodfacts'
